@@ -1,91 +1,21 @@
 (defproject kmc-booking "0.1.0-SNAPSHOT"
-  :description "FIXME: write this!"
+  :description "FIXME: write description"
   :url "http://example.com/FIXME"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
+  :dependencies [[org.clojure/clojure "1.5.1"]
+                 [org.clojure/java.jdbc "0.3.2"]
+                 [postgresql "9.1-901.jdbc4"]
+                 [ring/ring-jetty-adapter "1.2.1"]
+                 [compojure "1.1.6"]
+                 [hiccup "1.0.4"]]
 
-  :dependencies [[org.clojure/clojure "1.6.0"]
-                 [org.clojure/clojurescript "0.0-2850"]
-                 [figwheel "0.2.5-SNAPSHOT"]
-                 [org.clojure/core.async "0.1.346.0-17112a-alpha"]
-                 [datascript "0.9.0"]
-                 [rum "0.2.6"]
-                 [ring/ring-core "1.3.1"]
-                 [ring/ring-jetty-adapter "1.3.1"]
+  :plugins [[lein-ring "0.8.12"]]
+  :ring {:handler kmc-booking.web/application
+         :init    kmc-booking.web/init
+        :destroy  kmc-booking.web/destroy}
 
-                 [org.clojure/java.jdbc "0.3.6"]
-                 [org.postgresql/postgresql "9.2-1002-jdbc4"]
-                 ;[korma "0.4.0"]
-                 [c3p0/c3p0 "0.9.1.2"]
-                 ]
-
-  :jvm-opts ["-server"
-             "-Xms1024m"
-             "-Xmx2048m"
-             "-XX:PermSize=64M"
-             "-XX:MaxPermSize=256M"
-             ]
-
-
-
-  :plugins [[lein-cljsbuild "1.0.4"]
-            [lein-figwheel "0.2.5-SNAPSHOT"]]
-
-  :source-paths ["src"]
-
-  :clean-targets ^{:protect false} ["resources/public/js/compiled"]
-
-  :cljsbuild {
-    :builds [{:id "dev"
-              :source-paths ["src" "dev_src"]
-              :compiler {:output-to "resources/public/js/compiled/kmc_booking.js"
-                         :output-dir "resources/public/js/compiled/out"
-                         :optimizations :none
-                         :main kmc-booking.dev
-                         :asset-path "js/compiled/out"
-                         :source-map true
-                         :source-map-timestamp true
-                         :cache-analysis true }}
-             {:id "min"
-              :source-paths ["src"]
-              :compiler {:output-to "resources/public/js/compiled/kmc_booking.js"
-                         :main kmc-booking.core
-                         :optimizations :advanced
-                         :pretty-print false
-                         :warnings {:single-segment-namespace false}
-                         }}]}
-
-  :figwheel {
-             :http-server-root "public" ;; default and assumes "resources"
-             :server-port 3449 ;; default
-             :css-dirs ["resources/public/css"] ;; watch and update CSS
-
-             ;; Start an nREPL server into the running figwheel process
-             ;; :nrepl-port 7888
-
-             ;; Server Ring Handler (optional)
-             ;; if you want to embed a ring handler into the figwheel http-kit
-             ;; server, this is simple ring servers, if this
-             ;; doesn't work for you just run your own server :)
-             :ring-handler kmc-booking.server/handler
-
-             ;; To be able to open files in your editor from the heads up display
-             ;; you will need to put a script on your path.
-             ;; that script will have to take a file path and a line number
-             ;; ie. in  ~/bin/myfile-opener
-             ;; #! /bin/sh
-             ;; emacsclient -n +$2 $1
-             ;;
-             ;; :open-file-command "myfile-opener"
-
-             ;; if you want to disable the REPL
-             ;; :repl false
-
-             ;; to configure a different figwheel logfile path
-             ;; :server-logfile "tmp/logs/figwheel-logfile.log"
-             }
-
-:ring {:handler kmc-booking.server/app
-      ;:nrepl {:start? true :port 4500}
-         :port 8090}
-             )
+  :min-lein-version "2.0.0"
+  :main ^:skip-aot kmc-booking.web
+  :uberjar-name "kmc-booking-standalone.jar"
+  :profiles {:uberjar {:aot :all}})
